--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,20 @@ a {
     font-size:24px;
     font-weight:700;
 }
+
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;}
+    @keyframes fade  {from{opacity: 0.1;} to {opacity: 1;}}
+
 .order {
     padding-bottom:80px;
 }
